--- a/pjt_trip/index.html
+++ b/pjt_trip/index.html
@@ -12,7 +12,7 @@
    <link href="https://fonts.googleapis.com/css?family=Gaegu:300,400,700&display=swap&subset=korean" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:200,300,400,500,600,700,900&display=swap&subset=korean" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700|Noto+Serif+KR:200,300,400,500,600,700,900|Yeon+Sung&display=swap&subset=korean" rel="stylesheet">
-
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e93aec1e4a33e871b171b7bfdc9d6897&libraries=services"></script>
   </head>
   <style>
   .body{
@@ -20,11 +20,11 @@
   }
   </style>
   <body>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=35afcdf0f7afa43567b8cff5ea860504"></script>
+
     <script src="https://unpkg.com/vue-scroll-loader"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-
+  <!-- <script src="postcode.v2.js"></script> -->
   </body>
 </html>
