190807|현재 위도경도로 지도 띄우고 지역 이름 뽑아내기

--- a/pjt/hj/index.html
+++ b/pjt/hj/index.html
@@ -2,17 +2,34 @@
 <html>
 
 <head>
+    ㅗ
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5cb4a6052bf911d66d73c4c082e99ab7&libraries=services,clusterer,drawing"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>pjt_trip</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900%7CMaterial+Icons" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=02944ce63841052494b1b34180ad4ba8"></script>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque:300,400,500,600,700,800,900|Hanalei|Indie+Flower|Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Darker+Grotesque:300,400,500,600,700,800,900|Hanalei|Indie+Flower|Notable|Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gaegu:300,400,700&display=swap&subset=korean" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:200,300,400,500,600,700,900&display=swap&subset=korean" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700|Noto+Serif+KR:200,300,400,500,600,700,900|Yeon+Sung&display=swap&subset=korean" rel="stylesheet">
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5cb4a6052bf911d66d73c4c082e99ab7&libraries=services"></script> -->
 </head>
+<style>
+    .body {
+        height: auto;
+    }
+</style>
 
 <body>
+
+    <script src="https://unpkg.com/vue-scroll-loader"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-
+    <!-- <script src="postcode.v2.js"></script> -->
 </body>
 
 </html>
