--- a/pjt_trip/static/index.html
+++ b/pjt_trip/static/index.html
@@ -3,19 +3,77 @@
   <head>
     <meta charset="utf-8">
     <title>채팅</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/index.js"></script>
+    <!-- <link rel="stylesheet" href="/css/index.css"> -->
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <!-- <script src="/js/index.js"></script> -->
+
   </head>
   <body>
-    <div id="main">
-      <div id="chat">
-        <!-- 채팅 메시지 영역 -->
-      </div>
-      <div>
-        <input type="text" id="test" placeholder="메시지를 입력해주세요..">
-        <button onclick="send()">전송</button>
-      </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <script>
+    	var socket = io();
+    	// on connection to server, ask for user's name with an anonymous callback
+      socket.on('connect', function(){
+        // call the server-side function 'adduser' and send one parameter (value of prompt)
+        socket.emit('adduser','start');
+      });
+    	// socket.on('login', function(name){
+    	// 	// call the server-side function 'adduser' and send one parameter (value of prompt)
+    	// 	socket.emit('adduser', name);
+    	// });
+    	// listener, whenever the server emits 'updatechat', this updates the chat body
+    	socket.on('updatechat', function (username, data) {
+    		$('#conversation').append('<b>'+username + ':</b> ' + data + '<br>');
+    	});
+    	// listener, whenever the server emits 'updaterooms', this updates the room the client is in
+    	socket.on('updaterooms', function(rooms, current_room) {
+    		$('#rooms').empty();
+    		$.each(rooms, function(key, value) {
+    			if(value == current_room){
+    				$('#rooms').append('<div>' + value + '</div>');
+    			}
+    			else {
+    				$('#rooms').append('<div><a href="#" onclick="switchRoom(\''+value+'\')">' + value + '</a></div>');
+    			}
+    		});
+    	});
+      socket.on('creater_out', function(chat_pk,user_pk){
+        var url = 'http://192.168.31.84:8080/api/chat/' + chat_pk + '/delete/'+ user_pk
+        axios.get(url)
+      });
+
+    	function switchRoom(room){
+    		socket.emit('switchRoom', room);
+    	}
+
+    	// on load of page
+    	$(function(){
+    		// when the client clicks SEND
+    		$('#datasend').click( function() {
+    			var message = $('#data').val();
+    			$('#data').val('');
+    			// tell server to execute 'sendchat' and send along one parameter
+    			socket.emit('sendchat', message);
+    		});
+    		// when the client hits ENTER on their keyboard
+    		$('#data').keypress(function(e) {
+    			if(e.which == 13) {
+    				$(this).blur();
+    				$('#datasend').focus().click();
+    			}
+    		});
+    	});
+    </script>
+    <div style="float:left;width:100px;border-right:1px solid black;height:300px;padding:10px;overflow:scroll-y; display:none;">
+    	<b>ROOMS</b>
+    	<div id="rooms"></div>
+    </div>
+    <div style="float:left;width:300px;height:250px;overflow:scroll-y;padding:10px;">
+    	<div id="conversation"></div>
+    	<input id="data" style="width:200px;" />
+    	<input type="button" id="datasend" value="send" />
     </div>
   </body>
 </html>
