--- a/pjt_trip/static/index.html
+++ b/pjt_trip/static/index.html
@@ -19,7 +19,7 @@
     }
 
     /* 채팅 영역 */
-    #chat {
+    #conversation{
       height: 90%;
       width: 100%;
       overflow-y: auto;
@@ -125,7 +125,7 @@
     	<b>ROOMS</b>
     	<div id="rooms"></div>
     </div>
-    <div style="float:left;width:300px;height:250px;overflow:scroll-y;padding:10px;">
+    <div id="main">
     	<div id="conversation"></div>
     	<input id="data" style="width:400px;" />
     	<input type="button" id="datasend" value="send" />
